--- a/index.html
+++ b/index.html
@@ -1,46 +1,14 @@
 <HTML>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<title>Welcome!</title>
-	<style type="text/css">
-		.main-text{
-			font-family: 'Oswald', sans-serif;
-		}
-
-		.initrow{
-			margin-top: 25%;
-		}
-
-		.otherrow{
-			margin-left: 50%;
-		}
-	</style>
+	<link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet">
+	<link rel="stylesheet" href="css/main.css">
 	<script type="text/javascript"></script>
 </head>
 <body>
-<!-- <div class = "row initrow">
-	<div class ="col-xs-2 col-md-offset-12 main-text"><p>Hi there</p></div>
-	<div class ="col-xs-2 main-text"><p>I'm Ribhu Lahiri</p></div>
-</div>
-<div class = "row otherrow">
-	<div class="main-text"><p>I do</p></div>
-	<div class="main-text"><p>cool Stuff</p></div>
-</div> -->
-<div class="container-fluid"> <!-- If Needed Left and Right Padding in 'md' and 'lg' screen means use container class -->
-            <div class="row">
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                    <a href="#">About</a>
-                </div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                    <img src="image.png" />
-                </div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                    <a href="#myModal1" data-toggle="modal">SHARE</a>
-                </div>
-            </div>
-        </div>
-	<script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+<div class = "square" id = "square-1">Ribhu Lahiri's</div>
+<div class= "square" id = "square-2">portfolio</div>
+<div class= "square" id = "square-3">should be up</div>
+<div class= "square" id = "square-4">soon..</div>
 </body>
 </HTML>
