Change in colours
Changed the colour palette of landing page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class = "square" id = "square-1">Ribhu Lahiri's</div>
 <div class= "square" id = "square-2">portfolio</div>
-<div class= "square" id = "square-3">should be up</div>
+<div class= "square" id = "square-3">should be here</div>
 <div class= "square" id = "square-4">soon..</div>
 </body>
 </HTML>
