--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript"></script>
 </head>
 <body>
+<!-- Is it working? -->
 <div class = "square" id = "square-1">Watch this space</div>
 <div class= "square" id = "square-2">for</div>
 <div class= "square" id = "square-3">Ribhu Lahiri's</div>
