--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,6 +18,6 @@
 <div class = "square" id = "square-1">Watch this space</div>
 <div class= "square" id = "square-2">for</div>
 <div class= "square" id = "square-3">Ribhu Lahiri's</div>
-<div class= "square" id = "square-4">portfolio..  <a href="https://github.com/ribhu97"><span class="glyphicon glyphicon-arrow-right"></span></a></div>
+<div class= "square" id = "square-4">portfolio...  <a href="https://github.com/ribhu97"><span class="glyphicon glyphicon-arrow-right"></span></a></div>
 </body>
 </HTML>
